--- a/css/public/reset.css
+++ b/css/public/reset.css
@@ -13,7 +13,11 @@ body {
     height: 100vh;
 	font-size: 0.24rem;
 	font-family:"PingFangMedium";
-    background: linear-gradient(#142785,#101b59);
+	background: -moz-linear-gradient(top, #142785 0%, #101b59 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #142785), color-stop(100%, #101b59));
+	background: -webkit-linear-gradient(top, #142785 0%, #101b59 100%);
+	background: -o-linear-gradient(top, #142785 0%, #101b59 100%);
+	background: -ms-linear-gradient(top, #142785 0%, #101b59 100%);
 }
 
  h1, h2, h3, h4, h5, h6 {
