首页换图标、头部增加更按钮

--- a/css/home/index.css
+++ b/css/home/index.css
@@ -2,6 +2,7 @@
     width: 100%;
     height: 100%;
     background: linear-gradient(#142785,#101b59);
+    padding-bottom: 1.3rem;
 }
 /* 轮播图 */
 .banner-wrap-zp img{
@@ -28,7 +29,8 @@
 }
 .nav-wrap-zp ul{
     display: flex;
-    justify-content: space-around;
+    padding: 0 0.4rem;
+    justify-content: space-between;
     flex-wrap: wrap;
 }
 .nav-wrap-zp ul li{
@@ -74,4 +76,7 @@
 }
 .nav-wrap-zp ul li.itemColor-6{
     background: linear-gradient(#cd7af9,#9c45ef);
+}
+.nav-wrap-zp ul li.itemColor-7{
+    background: linear-gradient(#54d9cf,#6c76bb);
 }
