--- a/css/public/base.css
+++ b/css/public/base.css
@@ -16,6 +16,23 @@
     width: 0.16rem;
     height: 0.26rem;
 }
+.header-zp .share-btn{
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 10%;
+    height: 100%;
+    color:#fff;
+    display: -webkit-box;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+  	align-items: center;
+    justify-content: center;
+    vertical-align: middle;
+}
+
 .header-zp h3{
     text-align: center;
     font-size: 0.28rem;
