--- a/css/home/lj_style.css
+++ b/css/home/lj_style.css
@@ -113,16 +113,16 @@
 .acc_apply ul li{
 	width: 100%;
 	display: block;
-	/*height: 36px;*/
 	line-height: 36px;
 	border-top: 1px solid #d6d6d6;
+	margin-top: 0.4rem;
 }
 
 .acc_apply ul li input{
 	border: 0;
 }
 .acc_apply ul li label{
-	margin-left: 10px;
+	margin-left: 0.1rem;
 	color: #323232;
 }
 .acc_apply ul li .acc_five{
@@ -140,15 +140,27 @@
 }
 
 .acc_apply ul li .acc_imgin{
-	width: 100%;
-	height: 500px;
+	/*width: 100%;
+	height: 5rem;*/
+	max-width: 100%;
+	max-height: 100%;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+	
+	
 }
 .acc_sc{
 	position: relative;
 	height: 0.8rem;
-	margin: 10px 0;
+	margin: 0.1rem 0;
 	background-color: #f7f7f7;
+	text-align: center;
+	line-height: 0.8rem;
+	border-radius: 0.09rem;
 }
+#sss{width: 100%;height: 5rem;background: #fff;position: relative;border-radius: 0.09rem;}
 .acc_sc .ph08{
 	opacity: 0;
 	z-index: 10;
@@ -161,7 +173,7 @@
 
 .acc_sc .acc_scicon{
 	display: block;
-	color: #b2b2b2;
+	color: #000;
 	
 }
 
@@ -174,14 +186,14 @@
 }
 
 .acc_img .ph09{
-	font-size: 10px!important;
-	line-height: 18px;
+	font-size: 0.1rem!important;
+	line-height: 0.18rem;
 	
 }
 
 .acc_foot{
 	width: 100%;
-	height: 36px;
+	height: 0.36rem;
 	position: fixed;
 	bottom: 0;
 	line-height: 36px;
