--- a/css/public/reset.css
+++ b/css/public/reset.css
@@ -10,7 +10,7 @@
 }
 body {
 	width: 100%;
-    height: 100vh;
+    height: 100%;
 	font-size: 0.24rem;
 	font-family:"PingFangMedium";
 	background: -moz-linear-gradient(top, #142785 0%, #101b59 100%);
