--- a/css/home/lj_set.css
+++ b/css/home/lj_set.css
@@ -22,10 +22,10 @@
 .lj_szmm_main ul li img{width: 0.3rem;height: 0.3rem;vertical-align: middle;}
 .lj_szmm_main ul li{border-bottom: 0.01rem solid #CCCCCC;line-height: 0.7rem;width: 60%;margin: 0 auto;}
 .lj_szmm_main ul li input{font-size: 0.18rem;width: 85%;}
-.lj_szmm_main a{background: #181774;color: #fff;padding: 0.1rem 0.7rem;border-radius: 0.1rem;margin-left: 0.15rem;}
+.lj_szmm_main a{background: #181774;color: #fff;padding: 0.1rem 0.7rem;border-radius: 0.1rem;margin-left: 0.15rem;display: block;}
 
 
-.lj_sz_btn{width: 66%;margin: 0 auto;margin-top: 0.5rem;}
+.lj_sz_btn{width: 92%;margin: 0 auto;margin-top: 0.5rem;}
 
 .lj_sz_btn a{text-align: center;font-size: 0.24rem;color: #000;padding: 0.1rem 1.9rem;background: #f5f5f5;border-radius: 0.09rem;display: block;margin-bottom: 0.3rem;}
 .lj_szmm_a{width: 61%;margin: 0 auto;}
