--- a/css/public/base.css
+++ b/css/public/base.css
@@ -3,8 +3,10 @@
     width: 100%;
     height: 0.88rem;
     background-color: #101b59;
-    position: relative;
     color: #fff;
+    position: fixed;
+    top: 0;
+    left: 0;
 }
 .header-zp .return{
     position: absolute;
