--- a/css/my/upIDCard.css
+++ b/css/my/upIDCard.css
@@ -105,7 +105,7 @@
 	top: 10px;
 	
 }
-
+.acc_apply{padding-top: 0.88rem;box-sizing: border-box;}
 .acc_head div h1{
 	line-height: 40px;
 	font-size: 20px;
