--- a/css/my/editPass.css
+++ b/css/my/editPass.css
@@ -1,7 +1,7 @@
 
 .lj_wrap{max-width: 6.9rem;margin: 0 auto;}
 
-.lj_sz_main{margin-top: 0.2rem;background: #F5F5F5;border-radius: 0.09rem;padding: 0 0.2rem;box-sizing: border-box;margin-top: 1.28rem;}
+.lj_sz_main{background: #F5F5F5;border-radius: 0.09rem;padding: 0 0.2rem;box-sizing: border-box;margin-top: 1.28rem;}
 
 .lj_sz_main ul li{border-bottom: 0.01rem solid #000;line-height: 0.8rem;}
 .lj_sz_main ul li input{font-size: 0.24rem;color: #000;width: 70%;}
