--- a/css/public/reset.css
+++ b/css/public/reset.css
@@ -42,6 +42,11 @@ li{
 	list-style-type: none;
 }
 
+input[type=button], input[type=submit], input[type=file], button { 
+	cursor: pointer; 
+	-webkit-appearance: none; 
+}
+
 
 /*清除浮动*/	
 .clearfix:before{
