--- a/css/home/present.css
+++ b/css/home/present.css
@@ -8,10 +8,11 @@
 	height: .88rem;
 	line-height: .88rem;
 	position: fixed;
-	top: .88rem;
 	left: 0;
+	top: .88rem;
 	padding: 0 .4rem;
 	background: #5a62af;
+	transition: .3s linear;
 	box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
@@ -37,11 +38,10 @@
 }
 
 .currency {
-	margin-top: 1rem;
 	letter-spacing: .01rem;
 	width: 100%;
 	height: auto;
-	padding: 0 .2rem;
+	padding: 1.88rem .2rem 0;
 	box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
@@ -54,7 +54,7 @@
 	margin-top: .25rem;
 	background: #242e65;
 	color: #6c89ca;
-	border: .01rem solid #00FFFF;
+	border: .01rem solid #66cc;
 	border-radius: .1rem;
 	overflow: hidden;
 	padding: 0 .2rem;
@@ -97,4 +97,48 @@
 	box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
+}
+.popover{
+	display: none;
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	padding: 0 .2rem;
+	left: 0;
+	top: 0;
+	background: rgba(0,0,0,.5);
+	box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+}
+.popover .popover_content{
+	color: #f5f5f5;
+	letter-spacing: .01rem;
+	position: relative;
+	width: 100%;
+	height: auto;
+	padding-bottom: 1rem;
+	line-height: 2rem;
+	margin-top: 4rem;
+	text-align: center;
+	background: #404786;
+	border-radius: .1rem;
+}
+.popover .popover_affirm{
+	width: 100%;
+	height: 1rem;
+	line-height: 1rem;
+	border-top: .01rem solid #66cc;
+	position: absolute;
+	bottom: 0;
+	left: 0;
+}
+.popover .popover_affirm span{
+	display: block;
+	float: left;
+	width: 49.9%;
+	text-align: center;
+}
+.true{
+	border-right: .01rem solid #66cc;
 }
