--- a/css/user/register.css
+++ b/css/user/register.css
@@ -1,7 +1,17 @@
 /* 
    注册样式表
 */
-
+body {
+    width: 100%;
+    height: 100vh;
+    font-size: 0.24rem;
+    font-family: "PingFangMedium";
+    background: -moz-linear-gradient(top, #1de5e2 0%, #b588f7 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #1de5e2), color-stop(100%, #b588f7));
+    background: -webkit-linear-gradient(top, #1de5e2 0%, #b588f7 100%);
+    background: -o-linear-gradient(top, #1de5e2 0%, #b588f7 100%);
+    background: -ms-linear-gradient(top, #1de5e2 0%, #b588f7 100%);
+}
 
 .registerbox{
     width: 100%;
@@ -9,7 +19,7 @@
     margin-left:auto;
     margin-right: auto;
 }
-.headerbox{
+/* .headerbox{
     height: 1rem;
     width: 100%;
     position: relative;
@@ -27,22 +37,37 @@
 .headerbox  .headertitle{
     font-size:.3rem;
     color: #ffffff;
-}
+} */
 
 .reg-new-page{
     padding:.2rem .3rem .2rem .3rem;
 }
  .from-group{
-     margin-top: .4rem;
+    /* margin-top: .2rem; */
     border-bottom: .01rem solid  #e0e0e0;
-    padding-bottom: .1rem;
     position: relative;
+    background: #ffffff;
+    border-radius: .2rem;
+    height: .8rem;
+    line-height: .8rem;
+    background: -moz-linear-gradient(left, #facd68 0%, #fc76b3 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #facd68), color-stop(100%, #fc76b3));
+    background: -webkit-linear-gradient(left, #facd68 0%, #fc76b3 100%);
+    background: -o-linear-gradient(left, #facd68 0%, #b588f7 100%);
+    background: -ms-linear-gradient(left, #facd68 0%, #b588f7 100%);
  }
-
- .from-group .from-tit{
-     font-size:.3rem;
-     color: #ffffff;
+ .from-group .from-cc{
+    font-size: .3rem;
+    color: #1153f3;
+    padding-left: .1rem;
  }
+ .from-group .from-tit {
+    display: inline-block;
+    width: 1.2rem;
+    font-size: .3rem;
+    color: #1153f3;
+    padding-left: .1rem;
+}
 
  .from-group .acc{
     vertical-align: middle;
@@ -50,24 +75,26 @@
  
  .from-group input{
      padding-left:.1rem;
-     color: #ffffff;
+     color: #17223b;
      font-size: .3rem;
+     height:.8rem;
  }
  
  .from-group .send-code{
      border: 0;
-     background: #e0e0e0;
+     background: #08c792;
      width: 2.12rem;
      height: .8rem;
      border-radius: .2rem;
      color: #ffffff;
      font-size: .3rem;
      position: absolute;
-     right: .1rem;
-     bottom: .1rem;
+     right: 0rem;
+     bottom: 0rem;
  }
   .policy{
       border: 0;
+      margin-top: .2rem; 
   }
   .policy .icon{
       background: url("/image/user/quanquan.png")no-repeat;
@@ -97,25 +124,32 @@
   .reg-btn .btn{
       width: 100%;
       height: .8rem;
-      background: #c00;
       color: #ffffff;
       border: 0;
       font-size: .3rem;
       border-radius: .2rem;
+      background: -moz-linear-gradient(left, #1de5e2 0%, #1153fc 100%);
+      background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #1de5e2), color-stop(100%, #1153fc));
+      background: -webkit-linear-gradient(left, #1de5e2 0%, #1153fc 100%);
+      background: -o-linear-gradient(left, #1de5e2 0%, #1153fc 100%);
+      background: -ms-linear-gradient(left, #1de5e2 0%, #1153fc 100%);
   }
   .reg-btn .dis{
-       background-color: #b0b0b0;
+       background: -moz-linear-gradient(left, #b0b0b0 0%, #17223b 100%);
+       background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #b0b0b0), color-stop(100%, #17223b));
+       background: -webkit-linear-gradient(left, #b0b0b0 0%, #17223b 100%);
+       background: -o-linear-gradient(left, #b0b0b0 0%, #17223b 100%);
+       background: -ms-linear-gradient(left, #b0b0b0 0%, #17223b 100%);
    }
-
-   .info{
-       position: relative;
-       top:.4rem;
-       left:1.1rem;
-   }
+  .info{
+    height: .3rem;
+    text-align: center;
+    width: 80%;  
+  }
    .info.mistake{
     color: red;
-   }
- .info.correct{
+}
+.info.correct{
      color:green;
  }
  .pptt::-webkit-input-placeholder { /* WebKit browsers */
@@ -132,4 +166,24 @@ color:#637fbe
 
 .pptt:-ms-input-placeholder { /* Internet Explorer 10+ */
 color: #637fbe
+}
+
+.login-new{
+    display: -webkit-box;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+    display: flex;
+    justify-content: space-between;
+    padding-top:.3rem;
+}
+.login-new a{
+    background-color: transparent;
+    border: 1px solid #fff;
+    border-radius: .625rem;
+    color: #fff;
+    height: .5rem;
+    line-height: .5rem;
+    text-align: center;
+    width: 2rem;
 }
