--- a/css/login/login.css
+++ b/css/login/login.css
@@ -18,28 +18,12 @@ body {
     margin-left:auto;
     margin-right: auto;
 }
-/* .headerbox{
-    height: 1rem;
-    width: 100%;
-    position: relative;
-    text-align: center;
-    line-height: 1rem;
-    background: #101b59;
-}
-.headerbox .goback{
-    position: absolute;
-    left:.3rem;
-    top: .3rem; 
-    width: .35rem;
-    height: .35rem;
-}
-.headerbox  .headertitle{
-    font-size:.3rem;
-    color: #ffffff;
-} */
+
 
 .login-new-page{
     padding:.3rem .3rem .3rem .3rem;
+    padding-top: .88rem;
+    box-sizing: border-box;
 }
 .from-group{
     /* margin-top: .2rem; */
@@ -69,36 +53,8 @@ body {
     font-size: .3rem;
     height:.8rem;
 }
-<<<<<<< HEAD:css/user/login.css
-=======
-  .from-group .from-tit{
-      font-size: .3rem;
-      color: #ffffff;
-  }
-  .from-group input{
-      padding-left:.2rem;
-      color: #ffffff;
-      font-size: .3rem;
-  }
-  .info{
-    position: relative;
-    top:.4rem;
-    left:1.1rem;
-}
->>>>>>> 26328bd9925d4888b86d73e9c2bacfff903b7c73:css/login/login.css
 
-  /* .sms-login-from .btn{
-  margin-top:.5rem;
-  width: 100%;
-  height: .8rem;
-  border: 0;
-  font-size: .3rem;
-  color: #FFFFFF;
-  }
-  .sms-login-from  .dis{
-      background-color: #b0b0b0;
-    border-radius: .2rem;
-  } */
+  
  .info.mistake {
     color: red;
 }
