--- a/css/login/retrieve.css
+++ b/css/login/retrieve.css
@@ -14,30 +14,15 @@ body {
     background: -ms-linear-gradient(top, #1de5e2 0%, #b588f7 100%);
 }
 .retrievebox{
+	padding-top: .88rem;
+	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
     width: 100%;
     position: relative;
     margin-left:auto;
     margin-right: auto;
 }
-/* .headerbox{
-    height: 1rem;
-    width: 100%;
-    position: relative;
-    text-align: center;
-    line-height: 1rem;
-    background: #101b59;
-}
-.headerbox .goback{
-    position: absolute;
-    left:.3rem;
-    top: .3rem; 
-    width: .35rem;
-    height: .35rem;
-}
-.headerbox  .headertitle{
-    font-size:.3rem;
-    color: #ffffff;
-} */
 
 .retrieve-new-page{
     padding: .3rem;
