--- a/css/my/editPass.css
+++ b/css/my/editPass.css
@@ -1,7 +1,7 @@
 
 .lj_wrap{max-width: 6.9rem;margin: 0 auto;}
 
-.lj_sz_main{background: #F5F5F5;border-radius: 0.09rem;padding: 0 0.2rem;box-sizing: border-box;margin-top: 1.28rem;}
+.lj_sz_main{background: #F5F5F5;border-radius: 0.09rem;padding: 0 0.2rem;box-sizing: border-box;}
 
 .lj_sz_main ul li{border-bottom: 0.01rem solid #000;line-height: 0.8rem;}
 .lj_sz_main ul li input{font-size: 0.24rem;color: #000;width: 70%;}
@@ -13,7 +13,7 @@
 .lj_s_top img{float: left;margin-top: 0.3rem;width: 0.2rem;height: 0.3rem;}
 .lj_s_top p{text-align: center;color: #fff;}
 
-.lj_szmm_main{width: 70%;margin: 0 auto;margin-top: 0.7rem;margin-top: 1.28rem;}
+.lj_szmm_main{width: 70%;margin: 0 auto;margin-top: 0.3rem;}
 
 .lj_szmm_main ul{margin-bottom: 0.5rem;}
 .lj_szmm_main{background: #f5f5f5;padding: 0.2rem;box-sizing: border-box;border-radius: 0.09rem;}
@@ -27,5 +27,7 @@
 
 .lj_sz_btn{width: 92%;margin: 0 auto;margin-top: 0.5rem;}
 
-.lj_sz_btn a{text-align: center;font-size: 0.24rem;color: #000;padding: 0.1rem 1.9rem;background: #f5f5f5;border-radius: 0.09rem;display: block;margin-bottom: 0.3rem;}
+.lj_sz_btn a{text-align: center;font-size: 0.24rem;color: #000;padding: 0.1rem 1.9rem;background: #f5f5f5;border-radius: 0.09rem;display: block;margin-top: 0.3rem;}
 .lj_szmm_a{width: 61%;margin: 0 auto;}
+
+.lj_all{padding-top: 1.08rem;box-sizing: border-box;}
