--- a/css/login/register.css
+++ b/css/login/register.css
@@ -6,13 +6,15 @@ body {
     height: 100vh;
     font-size: 0.24rem;
     font-family: "PingFangMedium";
-    background: -moz-linear-gradient(top, #1de5e2 0%, #b588f7 100%);
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #1de5e2), color-stop(100%, #b588f7));
-    background: -webkit-linear-gradient(top, #1de5e2 0%, #b588f7 100%);
-    background: -o-linear-gradient(top, #1de5e2 0%, #b588f7 100%);
-    background: -ms-linear-gradient(top, #1de5e2 0%, #b588f7 100%);
+    background: -moz-linear-gradient(top, #2866a3 0%, #5ebfc8 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #2866a3), color-stop(100%, #5ebfc8));
+    background: -webkit-linear-gradient(top, #2866a3 0%, #5ebfc8 100%);
+    background: -o-linear-gradient(top, #2866a3 0%, #5ebfc8 100%);
+    background: -ms-linear-gradient(top, #2866a3 0%, #5ebfc8 100%);
 }
-
+.header-zp{
+    background-color: transparent;
+}
 .registerbox{
     width: 100%;
     position: relative;
@@ -27,18 +29,11 @@ body {
     box-sizing: border-box;
 }
  .from-group{
-    /* margin-top: .2rem; */
-    border-bottom: .01rem solid  #e0e0e0;
     position: relative;
-    background: #ffffff;
     border-radius: .2rem;
     height: .8rem;
     line-height: .8rem;
-    background: -moz-linear-gradient(left, #facd68 0%, #fc76b3 100%);
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #facd68), color-stop(100%, #fc76b3));
-    background: -webkit-linear-gradient(left, #facd68 0%, #fc76b3 100%);
-    background: -o-linear-gradient(left, #facd68 0%, #b588f7 100%);
-    background: -ms-linear-gradient(left, #facd68 0%, #b588f7 100%);
+    background-color: transparent;
  }
  .from-group .from-cc{
     font-size: .3rem;
@@ -49,8 +44,22 @@ body {
     display: inline-block;
     width: 1.2rem;
     font-size: .3rem;
-    color: #1153f3;
+    color: #ffffff;
     padding-left: .1rem;
+}
+
+.from-group .from-icon{
+    display: inline-block;
+    border: .01rem solid #ffffff;
+    width: 4.95rem;    
+    border-radius: .1rem;
+    height:.8rem;
+}
+.from-group .from-icon img{
+    padding-left: .3rem;
+    height:.3rem;
+    width: .3rem;
+    vertical-align: middle;
 }
 
  .from-group .acc{
@@ -59,27 +68,36 @@ body {
  
  .from-group input{
      padding-left:.1rem;
-     color: #17223b;
-     font-size: .3rem;
+     font-size: .2rem;
+     width: 4.17rem;    
      height:.8rem;
  }
+
+ .from-group .from-verify{
+    width: 2.8rem;    
+ }
+
+ .from-group .from-icon .verify{
+    width: 1.6rem;    
+}
  
  .from-group .send-code{
      border: 0;
-     background: #08c792;
+     background: -moz-linear-gradient(top, #d224d5 0%, #d296e2 100%);
+     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #d224d5), color-stop(100%, #d296e2));
+     background: -webkit-linear-gradient(top, #d224d5 0%, #d296e2 100%);
+     background: -o-linear-gradient(top, #d224d5 0%, #d296e2 100%);
+     background: -ms-linear-gradient(top, #d224d5 0%, #d296e2 100%);
      width: 2.12rem;
      height: .8rem;
      border-radius: .2rem;
      color: #ffffff;
      font-size: .3rem;
      position: absolute;
-     right: 0rem;
+     right: .5rem;
      bottom: 0rem;
  }
-  .policy{
-      border: 0;
-      margin-top: .2rem; 
-  }
+  
   .policy .icon{
       background: url("/image/user/quanquan.png")no-repeat;
       background-size: 100%;
@@ -91,7 +109,7 @@ body {
   }
 
   .policy .active{
-    background: url("/image/user/cheack.png")no-repeat;
+    background: url("/image/user/gou.png")no-repeat;
     background-size: 100%;
     width: .4rem;
     height: .4rem;
@@ -106,12 +124,14 @@ body {
       margin-top:.5rem;
   }
   .reg-btn .btn{
-      width: 100%;
-      height: .8rem;
-      color: #ffffff;
-      border: 0;
-      font-size: .3rem;
-      border-radius: .2rem;
+    width: 100%;
+    height: .8rem;
+    color: #1153f3;
+    border: 0;
+    font-size: .3rem;
+    border-radius: .2rem;
+  }
+  .reg-btn .active{
       background: -moz-linear-gradient(left, #1de5e2 0%, #1153fc 100%);
       background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #1de5e2), color-stop(100%, #1153fc));
       background: -webkit-linear-gradient(left, #1de5e2 0%, #1153fc 100%);
@@ -119,37 +139,37 @@ body {
       background: -ms-linear-gradient(left, #1de5e2 0%, #1153fc 100%);
   }
   .reg-btn .dis{
-       background: -moz-linear-gradient(left, #b0b0b0 0%, #17223b 100%);
-       background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #b0b0b0), color-stop(100%, #17223b));
-       background: -webkit-linear-gradient(left, #b0b0b0 0%, #17223b 100%);
-       background: -o-linear-gradient(left, #b0b0b0 0%, #17223b 100%);
-       background: -ms-linear-gradient(left, #b0b0b0 0%, #17223b 100%);
+       background: -moz-linear-gradient(left, #b0b0b0 0%, #95c5d6 100%);
+       background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #b0b0b0), color-stop(100%, #95c5d6));
+       background: -webkit-linear-gradient(left, #b0b0b0 0%, #95c5d6 100%);
+       background: -o-linear-gradient(left, #b0b0b0 0%, #95c5d6 100%);
+       background: -ms-linear-gradient(left, #b0b0b0 0%, #95c5d6 100%);
    }
   .info{
-    height: .3rem;
+    height: .5rem;
     text-align: center;
     width: 80%;  
+    line-height: .5rem;
   }
+
    .info.mistake{
     color: red;
 }
-.info.correct{
-     color:green;
- }
+
  .pptt::-webkit-input-placeholder { /* WebKit browsers */
-    color:#637fbe
+    color:#b8c9cf
 }
 
 .pptt:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
-    color:#637fbe
+    color:#b8c9cf
 }
 
 .pptt::-moz-placeholder { /* Mozilla Firefox 19+ */
-color:#637fbe
+color:#b8c9cf
 }
 
 .pptt:-ms-input-placeholder { /* Internet Explorer 10+ */
-color: #637fbe
+color: #b8c9cf
 }
 
 .login-new{
