--- a/css/wallet/wallet.css
+++ b/css/wallet/wallet.css
@@ -118,6 +118,7 @@ th,td{
 	position: absolute;
 	top: 15%;
 	left: 5%;
+	z-index: 5;
 	width: 90%;
 	height: 9.5rem;
 	background: linear-gradient(#1de5e2,#b588f7);
@@ -141,6 +142,7 @@ th,td{
 	position: absolute;
 	top: 15%;
 	left: 5%;
+	z-index: 5;
 	width: 90%;
 	height: 9.5rem;
 	background: linear-gradient(#1de5e2,#b588f7);
@@ -205,4 +207,15 @@ th,td{
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
     -webkit-appearance: none;
+}
+/*弹框-阴影*/
+.shadow {
+	display: none;
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 1;
+	width: 100%;
+	height: 100%;
+	background: rgba(0,0,0,0.5);
 }
