--- a/css/my/editPass.css
+++ b/css/my/editPass.css
@@ -21,7 +21,10 @@
 
 .lj_szmm_main ul li img{width: 0.3rem;height: 0.3rem;vertical-align: middle;}
 .lj_szmm_main ul li{border-bottom: 0.01rem solid #CCCCCC;line-height: 0.8rem;width: 70%;margin: 0 auto;}
-.lj_szmm_main ul li input{font-size: 0.18rem;width: 85%;}
+.lj_szmm_main ul li input{font-size: 0.3rem;width: 85%;vertical-align: middle;font-family: 'PingFangMedium';}
+.lj_szmm_main ul li input::-webkit-input-placeholder { /* WebKit browsers */
+font-size:0.3rem;
+}
 .lj_szmm_main a{line-height: 0.6rem; text-align: center;background: #181774;color: #fff;padding: 0.1rem 0.7rem;border-radius: 0.1rem;display: block;}
 
 
