--- a/css/home/present.css
+++ b/css/home/present.css
@@ -118,11 +118,15 @@
 	width: 100%;
 	height: auto;
 	padding-bottom: 1rem;
-	line-height: 2rem;
+	line-height: 1rem;
 	margin-top: 4rem;
 	text-align: center;
 	background: #404786;
 	border-radius: .1rem;
+}
+.popover .popover_content input{
+	margin-left: .05rem;
+	background: #f5f5f5;
 }
 .popover .popover_affirm{
 	width: 100%;
