--- a/css/login/retrieve.css
+++ b/css/login/retrieve.css
@@ -30,8 +30,9 @@ body {
 
 .retrieve-new-page{
     padding:.2rem .3rem .2rem .3rem;
-    padding-top: .88rem;
     box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
 }
 
 .from-group{
