--- a/css/login/login.css
+++ b/css/login/login.css
@@ -67,9 +67,10 @@ body {
  
 .from-group input{
     padding-left:.1rem;
-    font-size: .2rem;
+    font-size: .3rem;
     width: 85%; 
     height:.8rem;
+    color: #ffffff;
 }
  .info.mistake {
     color: red;
