--- a/css/login/retrieve.css
+++ b/css/login/retrieve.css
@@ -15,7 +15,11 @@ body {
 }
 
 .header-zp{
-    background-color: transparent;
+    background: -moz-linear-gradient(top, #2866a3 0%, #2866a3 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #2866a3), color-stop(100%, #2866a3));
+    background: -webkit-linear-gradient(top, #2866a3 0%, #2866a3 100%);
+    background: -o-linear-gradient(top, #2866a3 0%, #2866a3 100%);
+    background: -ms-linear-gradient(top, #2866a3 0%, #2866a3 100%);
 }
 .retrievebox{
 	padding-top: .88rem;
@@ -51,7 +55,7 @@ body {
 
  .from-group .from-cc{
     font-size: .3rem;
-    padding-left: .1rem;
+    
  }
 
 .from-tit {
@@ -59,12 +63,12 @@ body {
     width: 25%;
     font-size: .3rem;
     color: #ffffff;
-    padding-left: .1rem;
+    
 }
 
 .from-group .from-icon{
     display: inline-block;
-    border: .01rem solid #ffffff;
+    border: 1px solid #ffffff;
     width: 80%;
     border-radius: .1rem;
     height:.8rem;
@@ -138,14 +142,14 @@ body {
  /* 提示文字样式 */
     .info.mistake {
         color: red;
+        font-size: .3rem;
     }
 /* 提示栏样式 */
     .info{
         height: .5rem;
-        text-align: center;
-        width: 80%;  
         line-height: .5rem;
-      }
+        padding-left: 2rem;
+    }
 
 /* 输入框字体颜色 */
 .pptt::-webkit-input-placeholder { /* WebKit browsers */
